Backend - Implement API to retrieve authenticated user reports
